--- a/app/src/main/res/layout/news_item.xml
+++ b/app/src/main/res/layout/news_item.xml
@@ -1,41 +1,100 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:padding="10dp"
     android:id="@+id/news_item">
 
-    <TextView
-        android:id="@+id/title"
-        style="@style/Base.TextAppearance.AppCompat.Title"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/relativeLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:fontFamily="monospace"
-        android:textSize="16dp"/>
-    <TextView
-        android:id="@+id/description"
-        style="@style/AlertDialog.AppCompat.Light"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="monospace"
-        android:textSize="14dp"
-        />
+        android:layout_margin="5dp"
+        android:background="#FFFAFA"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/date"
-        style="@style/AlertDialog.AppCompat.Light"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="monospace"
-        android:textSize="10dp" />
+        <LinearLayout
+            android:id="@+id/linear"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="2dp"
-        android:background="#000000"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp" />
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="150dp"
+                android:layout_height="100dp"
+                android:scaleType="fitXY" />
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:textColor="#FF565656"
+                android:textSize="17sp"
+                android:textStyle="bold" />
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/date"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/linear"
+            android:layout_marginBottom="10dp"
+            android:layout_marginStart="3dp"
+            android:textColor="#FF565656"
+            android:textSize="12sp"
+            android:textStyle="bold" />
 
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/date"
+            android:layout_margin="3dp"
+            android:textColor="#FF565656"
+            android:textSize="12sp"
+            android:textStyle="bold" />
+
+
+    </RelativeLayout>
+
+
+
+</android.support.v7.widget.CardView>
+    <!--<TextView-->
+        <!--android:id="@+id/title"-->
+        <!--style="@style/Base.TextAppearance.AppCompat.Title"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:fontFamily="monospace"-->
+        <!--android:textSize="16dp"/>-->
+    <!--<TextView-->
+        <!--android:id="@+id/description"-->
+        <!--style="@style/AlertDialog.AppCompat.Light"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:fontFamily="monospace"-->
+        <!--android:textSize="14dp"-->
+        <!--/>-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/date"-->
+        <!--style="@style/AlertDialog.AppCompat.Light"-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:fontFamily="monospace"-->
+        <!--android:textSize="10dp" />-->
+
+    <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="2dp"-->
+        <!--android:background="#000000"-->
+        <!--android:layout_marginTop="8dp"-->
+        <!--android:layout_marginBottom="8dp" />-->
+
+
